package protobuf;

option java_package = "org.leo.serialize.protobuf.domain";
option java_outer_classname = "NewAddressBookProtos";

enum PhoneType {
	MOBILE = 0;
	HOME = 1;
	WORK = 2;
}

message PhoneNumber {
	required string number = 1;
	optional PhoneType type = 2 [default = HOME];
}

message Person {
	required string name = 1;
	required int32 id = 2;
	optional string email = 3;
	repeated PhoneNumber phone = 4;
}

message AddressBook {
	repeated Person person = 1;
}
